syntax = "proto3";

option go_package = "github.com/IBAX-io/go-ibax/packages/types";

package types;

import "play.proto";

// BlockSyncMethod define block sync method.
enum BlockSyncMethod{
  CONTRACTVM = 0;
  SQLDML = 1;
}

//BlockHeader is a structure of the block's header
message BlockHeader{
  int64 block_id = 1;
  int64 timestamp = 2;
  int64 ecosystem_id = 3;
  int64 key_id = 4;
  int64 node_position = 5;
  bytes sign = 6;
  bytes block_hash = 7;
  //differences with before and after in tx modification table
  bytes rollbacks_hash = 8;
  int32 version = 9;
  int32 consensus_mode = 10;
  bytes candidate_nodes = 11;
  int64 network_id = 12;
}

// BlockData is a structure of the block's
message BlockData {
    BlockHeader header = 1;
    BlockHeader prev_header = 2;
    bytes merkle_root =3;
    bytes bin_data =4;
    repeated bytes tx_full_data =5;
    AfterTxs after_txs =6;
    bool sys_update = 7;
}
